--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
-            <h2 class="card-title">Home car</h2>
+            <h2 class="card-title">K. Accessories</h2>
             <p><span class="card-price">39.00</span> TK</p>
           </div>
         </div>
@@ -105,7 +105,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Sports Back Cap</h2>
-            <p><span>49.00 </span>TK</p>
+            <p><span class="card-price">49.00 </span>TK</p>
           </div>
         </div>
         <!-- card-5 -->
@@ -122,7 +122,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Full Jersey Set</h2>
-            <p><span>69.00</span> TK</p>
+            <p><span class="card-price">69.00</span> TK</p>
           </div>
         </div>
         <!-- card-6 -->
@@ -139,7 +139,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Sports cates</h2>
-            <p><span>159.00</span> TK</p>
+            <p><span class="card-price">159.00</span> TK</p>
           </div>
         </div>
         </div>
@@ -147,7 +147,7 @@
     <div class="my-10">
       <div class="bg-[#FFF] p-5 rounded-lg">
         <p class="text-xl text-[#111]">Have coupon?</p>
-        <input type="text" class="py-2" placeholder="Coupon code">
+        <input id="coupon-code" type="text" class="py-2" placeholder="Coupon code">
         <button class="btn bg-[#E527B2] text-xl text-white">Apply</button>
       </div>
       <div class="mt-10 bg-[#FFF] p-5 rounded-lg my-5">
@@ -155,8 +155,8 @@
 
         </div>
         <p id="total-price" class="text-2xl">Total price:<span id="total-price-value">0.00</span>Tk</p>
-        <p class="text-2xl">Discout:</p>
-        <p class="text-2xl">Total:</p>
+        <p id="discount-price" class="text-2xl">Discout:</p>
+        <p id="grand-total" class="text-2xl">Total:</p>
         <!-- <button class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</button> -->
         <!-- The button to open modal -->
 <a href="#my_modal_8" class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</a>
