added more some part

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="font-work-sans bg-[#F9F6E2]">
     <!-- banner-section -->
-    <div class="flex items-center justify-around lg:flex-row sm:flex-col">
+    <div class="flex flex-col items-center justify-center lg:flex-row md:flex-col sm:flex-col">
 <div>
   <h4 class="text-3xl text-center text-[#111] mb-5">---SALE FEVER---</h4>
   <h1 class="text-5xl font-bold text-[#111]">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h1>
@@ -33,10 +33,10 @@
     </div>
   </header>
   <main class="font-work-sans bg-[#F8F8F8]">
-    <div class="flex lg:flex-row sm:flex-col justify-center mt-20 gap-20">
+    <div class="flex lg:flex-row sm:flex-col md:flex-col justify-center mt-20 gap-20">
       <div>
         <h3 class="text-4xl font-semibold text-[#111]">Kitchenware</h3>
-        <div class="grid lg:grid-cols-3 sm:grid-cols-1 my-5 gap-6">
+        <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 my-5 gap-6">
           <!-- card-1 -->
           <div  class="card w-96 bg-base-100 shadow-xl">
             <figure class="px-10 pt-10">
@@ -90,7 +90,7 @@
         </div>
         </div>
         <h3 class="text-4xl font-semibold text-[#111]">Sportsware</h3>
-        <div class="grid lg:grid-cols-3 sm:grid-cols-1 my-5 gap-6">
+        <div class="grid lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1 my-5 gap-6">
           <!-- card-4 -->
         <div class="card w-96 bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
@@ -147,8 +147,8 @@
     <div class="my-10">
       <div class="bg-[#FFF] p-5 rounded-lg">
         <p class="text-xl text-[#111]">Have coupon?</p>
-        <input id="coupon-code" type="text" class="py-2" placeholder="Coupon code">
-        <button class="btn bg-[#E527B2] text-xl text-white">Apply</button>
+        <input id="coupon-code" type="text" class="py-2 w-full md:w-2/3 lg:w-1/2" placeholder="Coupon code">
+        <button class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
       </div>
       <div class="mt-10 bg-[#FFF] p-5 rounded-lg my-5">
         <div id="select-items" class="list-none pl-0">
