--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
       <div class="bg-[#FFF] p-5 rounded-lg">
         <p class="text-xl text-[#111]">Have coupon?</p>
         <input id="coupon-code" type="text" class="py-2 w-full md:w-2/3 lg:w-1/2" placeholder="Coupon code">
-        <button class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
+        <button disabled class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
       </div>
       <div class="mt-10 bg-[#FFF] p-5 rounded-lg my-5">
         <div id="select-items" class="list-none pl-0">
 
         </div>
-        <p id="total-price" class="text-2xl">Total price:<span id="total-price-value">0.00</span>Tk</p>
-        <p id="discount-price" class="text-2xl">Discout:</p>
-        <p id="grand-total" class="text-2xl">Total:</p>
+        <p id="total-price" class="text-2xl">Total price:<span id="total-price-value">0.00</span>TK</p>
+        <p id="discount-price" class="text-2xl">Discout:<span id="discount-price-value">0.00</span>TK</p>
+        <p id="grand-total" class="text-2xl">Total:<span id="total-value">0.00</span>TK</p>
         <!-- <button class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</button> -->
         <!-- The button to open modal -->
 <a href="#my_modal_8" class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</a>
