--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3 class="text-4xl font-semibold text-[#111]">Kitchenware</h3>
         <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 my-5 gap-6">
           <!-- card-1 -->
-          <div  class="card w-96 bg-base-100 shadow-xl">
+          <div class="card w-96 bg-base-100 shadow-xl">
             <figure class="px-10 pt-10">
             <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -51,11 +51,11 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">K. Accessories</h2>
-            <p><span class="card-price">39.00</span> TK</p>
+            <p><span id="card-price-1" class="card-price">39.00</span> TK</p>
           </div>
         </div>
         <!-- card-2 -->
-        <div  class="card w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -68,11 +68,11 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">K. Accessories</h2>
-            <p><span class="card-price">29.00</span> TK</p>
+            <p><span id="card-price-2" class="card-price">29.00</span> TK</p>
           </div>
         </div>
         <!-- card-3 -->
-        <div  class="card w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -85,7 +85,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Home Cooker</h2>
-            <p><span class="card-price">31.00</span> TK</p>
+            <p><span id="card-price-3" class="card-price">31.00</span> TK</p>
           </div>
         </div>
         </div>
@@ -105,7 +105,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Sports Back Cap</h2>
-            <p><span class="card-price">49.00 </span>TK</p>
+            <p><span id="card-price-4" class="card-price">49.00 </span>TK</p>
           </div>
         </div>
         <!-- card-5 -->
@@ -122,7 +122,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Full Jersey Set</h2>
-            <p><span class="card-price">69.00</span> TK</p>
+            <p><span id="card-price-5" class="card-price">69.00</span> TK</p>
           </div>
         </div>
         <!-- card-6 -->
@@ -139,7 +139,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
             <h2 class="card-title">Sports cates</h2>
-            <p><span class="card-price">159.00</span> TK</p>
+            <p><span id="card-price-6" class="card-price">159.00</span> TK</p>
           </div>
         </div>
         </div>
@@ -148,17 +148,16 @@
       <div class="bg-[#FFF] p-5 rounded-lg">
         <p class="text-xl text-[#111]">Have coupon?</p>
         <input id="coupon-code" type="text" class="py-2 w-full md:w-2/3 lg:w-1/2" placeholder="Coupon code">
-        <button disabled class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
+        <button id="apply-btn" class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
       </div>
       <div class="mt-10 bg-[#FFF] p-5 rounded-lg my-5">
         <div id="select-items" class="list-none pl-0">
 
         </div>
-        <p id="total-price" class="text-2xl">Total price:<span id="total-price-value">0.00</span>TK</p>
-        <p id="discount-price" class="text-2xl">Discout:<span id="discount-price-value">0.00</span>TK</p>
-        <p id="grand-total" class="text-2xl">Total:<span id="total-value">0.00</span>TK</p>
-        <!-- <button class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</button> -->
-        <!-- The button to open modal -->
+        <p class="text-2xl">Total price:<span id="total-price-value">0.00</span>TK</p>
+        <p class="text-2xl">Discout:<span id="discount-price-value">0.00</span>TK</p>
+        <p class="text-2xl">Total:<span id="grand-total-value">0.00</span>TK</p>
+        
 <a href="#my_modal_8" class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</a>
 <div class="modal" id="my_modal_8">
   <div class="modal-box flex flex-col justify-center items-center">
