--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
   </header>
   <main class="font-work-sans bg-[#F8F8F8]">
-    <div class="flex lg:flex-row sm:flex-col md:flex-col justify-center mt-20 gap-20">
+    <div class="flex lg:flex-row sm:flex-col md:flex-col justify-center pt-20 pb-5 gap-20">
       <div>
-        <h3 class="text-4xl font-semibold text-[#111]">Kitchenware</h3>
+        <h3 class="text-4xl pb-5 font-semibold text-[#111]">Kitchenware</h3>
         <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 my-5 gap-6">
           <!-- card-1 -->
           <div class="card w-96 bg-base-100 shadow-xl">
@@ -89,7 +89,7 @@
           </div>
         </div>
         </div>
-        <h3 class="text-4xl font-semibold text-[#111]">Sportsware</h3>
+        <h3 class="text-4xl py-5 font-semibold text-[#111]">Sportsware</h3>
         <div class="grid lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1 my-5 gap-6">
           <!-- card-4 -->
         <div class="card w-96 bg-base-100 shadow-xl">
