--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
   </header>
   <main class="font-work-sans bg-[#F8F8F8]">
-    <div class="flex lg:flex-row sm:flex-col md:flex-col justify-center pt-20 pb-5 gap-20">
+    <div class="flex flex-col lg:flex-row sm:flex-col md:flex-col justify-center pt-20 pb-5 gap-20">
       <div>
         <h3 class="text-4xl pb-5 font-semibold text-[#111]">Kitchenware</h3>
         <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 my-5 gap-6">
           <!-- card-1 -->
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card bg-base-100 shadow-xl">
             <figure class="px-10 pt-10">
             <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -55,7 +55,7 @@
           </div>
         </div>
         <!-- card-2 -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <!-- card-3 -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -92,7 +92,7 @@
         <h3 class="text-4xl py-5 font-semibold text-[#111]">Sportsware</h3>
         <div class="grid lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1 my-5 gap-6">
           <!-- card-4 -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod4.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <!-- card-5 -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod5.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -126,7 +126,7 @@
           </div>
         </div>
         <!-- card-6 -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/prod6.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -158,15 +158,17 @@
         <p class="text-2xl">Discout:<span id="discount-price-value">0.00</span>TK</p>
         <p class="text-2xl">Total:<span id="grand-total-value">0.00</span>TK</p>
         
-<a href="#my_modal_8" class="btn bg-[#E527B2] text-xl w-full text-white">Make Purchase</a>
-<div class="modal" id="my_modal_8">
-  <div class="modal-box flex flex-col justify-center items-center">
+<button id="modal-btn" class="btn w-full text-white bg-[#E527B2]" onclick="my_modal_5.showModal()">open modal</button>
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <form method="dialog" class="modal-box flex flex-col justify-center items-center">
     <img src="images/congo.png" alt="">
     <h3 class="font-bold text-lg">Congratulations</h3>
     <p class="py-4">Your Purchase the product</p>
     <div class="modal-action">
-     <a href="#" class="btn bg-[#E527B2] text-white">Go Home</a>
+      <button onclick="closeModal()" class="btn text-white bg-[#E527B2]">Close</button>
     </div>
+  </form>
+</dialog>
   </div>
 </div>
     </div>
