discount price added

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="bg-[#FFF] p-5 rounded-lg">
         <p class="text-xl text-[#111]">Have coupon?</p>
         <input id="coupon-code" type="text" class="py-2 w-full md:w-2/3 lg:w-1/2" placeholder="Coupon code">
-        <button id="apply-btn" class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
+        <button onclick="updateTotalPriceDisplay()" id="apply-btn" class="btn bg-[#E527B2] text-xl text-white md:w-1/3 lg:w-1/4 mt-3 md:mt-0">Apply</button>
       </div>
       <div class="mt-10 bg-[#FFF] p-5 rounded-lg my-5">
         <div id="select-items" class="list-none pl-0">
