added full and final part

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               placeholder="Coupon code"
             />
             <button
-              onclick="updateTotalPriceDisplay()"
+              onclick="updateTotalPrice()"
               id="apply-btn"
               class="btn bg-[#E527B2] text-white md:w-1/3 lg:w-1/4 mt-3"
             >
@@ -336,7 +336,7 @@
               class="btn w-full text-white bg-[#E527B2]"
               onclick="my_modal_5.showModal()"
             >
-              open modal
+              Make Purchase
             </button>
             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
               <form
@@ -345,7 +345,7 @@
               >
                 <img src="images/congo.png" alt="" />
                 <h3 class="font-bold text-lg">Congratulations</h3>
-                <p class="py-4">Your Purchase the product</p>
+                <p class="py-4">You Purchase the product</p>
                 <div class="modal-action">
                   <button
                     onclick="closeModal()"
