added some correction

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
               Total:<span id="grand-total-value">0.00</span>TK
             </p>
             <!-- Modal part -->
-            <button
+            <button disabled
               id="modal-btn"
               class="btn w-full text-white bg-[#E527B2]"
               onclick="my_modal_5.showModal()"
